[package]
name = "serde-types"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
approx = "0.5.1"
chrono = "0.4.26"
humantime = "2.1.0"
indexmap = { version = "2.0.0", features = ["serde"] }
noisy_float = { version = "0.2.0", features = ["serde"] }
serde = { version = "1.0.185", features = ["derive"] }
serde_bytes = "0.11.12"
serde_json = "1.0.105"
url = { version = "2.4.0", features = ["serde"] }
slice-of-array = "0.3.2"
derivative = "2.2.0"
json5 = "0.4.1"
num-derive = "0.4.0"
num-traits = "0.2.16"
serde-loader = { version = "0.2.0", features = ["json", "json5"] }
nalgebra = { version = "0.30.1", optional = true }
opencv = { version = "0.83.0", optional = true }
measurements = { version = "0.11.0", optional = true }
cv-convert = { version = "0.24.1", default-features = false, optional = true }
prost = { version = "0.11.9", optional = true }
gcd = "2.3.0"

[features]
default = []
full = ["with-opencv", "with-nalgebra", "with-prost", "with-measurements"]
with-opencv = ["opencv", "cv-convert/opencv_0-83"]
with-nalgebra = ["nalgebra", "cv-convert/nalgebra_0-30"]
with-prost = ["prost"]
with-measurements = ["measurements"]
