[package]
name = "serde-types"
version = "0.1.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
approx = "0.5.1"
chrono = "0.4.31"
humantime = "2.1.0"
indexmap = { version = "2.0.2", features = ["serde"] }
noisy_float = { version = "0.2.0", features = ["serde"] }
serde = { version = "1.0.188", features = ["derive"] }
serde_bytes = "0.11.12"
serde_json = "1.0.107"
url = { version = "2.4.1", features = ["serde"] }
slice-of-array = "0.3.2"
derivative = "2.2.0"
json5 = "0.4.1"
num-derive = "0.4.1"
num-traits = "0.2.17"
serde-loader = { version = "0.2.0", features = ["json", "json5"] }
nalgebra = { version = "0.32.3", optional = true }
opencv = { version = "0.83.0", optional = true }
measurements = { version = "0.11.0", optional = true }
cv-convert = { version = "0.25.0", default-features = false, optional = true }
prost = { version = "0.12.1", optional = true }
gcd = "2.3.0"

[features]
default = []
full = ["with-opencv", "with-nalgebra", "with-prost", "with-measurements"]
with-opencv = ["opencv", "cv-convert/opencv_0-83"]
with-nalgebra = ["nalgebra", "cv-convert/nalgebra_0-32"]
with-prost = ["prost"]
with-measurements = ["measurements"]
