[package]
name = "wayside-params"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde-loader = { version = "0.1.4", features = ["json5"] }
anyhow = "1.0.58"
approx = "0.5.1"
chrono = "0.4.19"
derivative = "2.2.0"
indexmap = "1.9.1"
itertools = "0.10.3"
json5 = "0.4.1"
log = "0.4.17"
nalgebra = { version = "0.30.1", optional = true }
noisy_float = "0.2.0"
serde = { version = "1.0.140", features = ["derive"] }
serde_json = "1.0.82"
unzip-n = "0.1.2"
common-types = { path = "../common-types" }
ouster-lidar = "0.1.0"

[features]
default = []
full = ["with-nalgebra", "with-opencv"]
with-nalgebra = ["nalgebra", "common-types/with-nalgebra"]
with-opencv = ["common-types/with-opencv"]

[dev-dependencies]
cv-convert = "0.21.0"
glob = "0.3.0"
nalgebra = "0.30.1"
opencv = "0.69.0"
rand = "0.8.5"
serde-types = { path = "../serde-types" }
