[package]
name = "wayside-params"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde-loader = { version = "0.2.0", features = ["json5"] }
anyhow = "1.0.75"
approx = "0.5.1"
chrono = "0.4.31"
derivative = "2.2.0"
indexmap = "2.0.2"
itertools = "0.11.0"
json5 = "0.4.1"
log = "0.4.20"
nalgebra = { version = "0.30.1", optional = true }
noisy_float = "0.2.0"
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.107"
unzip-n = "0.1.2"
common-types = { path = "../common-types" }
ouster-lidar = "0.2.0"

[dev-dependencies]
cv-convert = { version = "0.24.1", default-features = false }
glob = "0.3.1"
nalgebra = "0.30.1"
opencv = "0.83.0"
rand = "0.8.5"
serde-types = { path = "../serde-types" }

[features]
full = ["with-nalgebra", "with-opencv"]
with-nalgebra = ["nalgebra", "common-types/with-nalgebra"]
with-opencv = ["common-types/with-opencv"]
