[package]
name = "aruco-detector"
version = "0.1.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde-loader = { workspace = true }
cv-convert = { workspace = true, features = ["nalgebra"] }
measurements = { workspace = true }
serde = { workspace = true }
anyhow = { workspace = true }
indexmap = { workspace = true }
log = { workspace = true }
serde-types = { version = "0.1.0", path = "../serde-types", features = ["with-opencv"] }
noisy_float = { workspace = true }
aruco-config = { version = "0.1.0", path = "../aruco-config", features = ["with-opencv"] }
itertools = { workspace = true }

[dependencies.opencv]
workspace = true
default-features = false
features = ["aruco", "calib3d"]

[dependencies.nalgebra]
workspace = true

[dependencies.newslab-geom-algo]
git = "https://github.com/NEWSLabNTU/newslab-geom-algo.git"
tag = "v0.2.1"

[dev-dependencies.opencv]
workspace = true
default-features = false
features = ["aruco", "imgcodecs"]

[dev-dependencies]
clap = { workspace = true }
