[package]
name = "hollow-board-config"
version = "0.1.1"
edition = "2021"

[dependencies]
serde-loader = { workspace = true }
nalgebra = { workspace = true }
approx = { workspace = true }
anyhow = { workspace = true }
serde = { workspace = true }
aruco-config = { version = "0.1.0", path = "../aruco-config" }
measurements = { workspace = true, features = ["serde"] }
kiss3d = { workspace = true, optional = true }

[dependencies.newslab-serde-measurements]
git = "https://github.com/NEWSLabNTU/newslab-serde.git"
tag = "v0.1.0"

[dependencies.newslab-serde-nalgebra]
git = "https://github.com/NEWSLabNTU/newslab-serde.git"
tag = "v0.1.0"
